2006-11-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Templates/ContactsUI/UIxContactsListViewContainer.wox: added
	a toolbar with two buttons ("add" and "remove") to manage the
	additional addressbooks a user might subscribe to.

	* UI/WebServerResources/ContactsUI.js: added code to handle
	"external addressbooks" from the Javascript point-of-view, by
	extending existing methods and adding code for the "add ab" and
	"remove ab" buttons.

	* UI/WebServerResources/generic.js: moved extensions methods to
	DOM elements to separate files for better clarity.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -pageContentClasses]):
	new method that returns "pageContent" as class, but also "popup"
	for the DIV where the page content lies, so that we can manipulate
	the content of popup's with CSS identifiers.

2006-10-31  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalInlineAptView.m ([UIxCalInlineAptView
	-displayStyle]): new method that returns a string containing the
	css style relative to the current appointment cell. This code is
	currently inactive but might be reused later.

	* UI/WebServerResources/SchedulerUI.js: added code to handle the
	display of the selected day (the day pointed by the mouse, or the
	current day when changing the view).

	* UI/Scheduler/UIxCalDayTable.m ([UIxCalDayTable
	-dayCellClasses]): new method that returns a string containing the
	css classes applicable to the current cell, depending on the
	position of the day in the week, the day of today and the
	requested day.

	* UI/Scheduler/UIxCalCalendarsListView.m ([UIxCalCalendarsListView
	-currentContactAptBorder]): new method that returns the
	appropriate border color for the specified user.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject
	-saveContentString:contentStringbaseVersion:baseVersion]):
	overloaded method that parse new events and detects if they have
	an organizer or not. If they are new and have no organizer set